# rtl-aid

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RULEBOOK.md  SKILLS.md  TESTING.md  TESTING_EDGE_CASES.md  TODO.md  pyproject.toml
docs/: TEST_COVERAGE.md  graph_schema.json  specs.md
scripts/: README.md  release.sh
src/rtl_aid/: __init__.py  cli.py  config.py  core.py  functions.py  lint.py  sv_builtin_functions.py
src/rtl_aid/config/: __init__.py  functions.yaml
src/rtl_aid/templates/: rtl-aidrc-template.yml
src/veridoc/: lint.py
templates/workflows/: rtl-checks.yml
tests/: __init__.py  support.py  test_config.py  test_core.py  test_lint.py
tests/config/: QUICK_START.md  README.md  __init__.py  test_cli_config_integration.py  test_cli_edge_cases.py  test_config_discovery.py  test_config_glob_patterns.py  test_config_integration.py  test_config_parsing.py  test_config_path_resolution.py  test_config_precedence.py  test_functions_config.py  test_init_workflow_config.py
tests/config/fixtures/: combined-valid.yml  invalid-types.yml  malformed.yml  rtl-aidrc-template.yml  rtldoc-valid.yml  rtllint-valid.yml  single-values.yml  unknown-keys.yml
tests/core/: test_builtin_functions.py  test_ci.py  test_export_dot.py  test_export_graph.py  test_gaps.py  test_json_graph_dir.py  test_markdown.py  test_parsing.py
tests/integration/: test_features_e2e.py
tests/lint/: test_gaps.py  test_include_dirs.py  test_parse_output.py  test_rtllint_command_tagging.py  test_tag_file.py  test_verilator_integration.py
(+52 files in other folders)
