[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl-aid"
version = "0.2.4"
description = "CI-native documentation layer for RTL projects"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "vishwaksen-1" }
]
keywords = [
    "verilog", "systemverilog", "rtl", "fpga", "asic", "eda",
    "documentation", "linting", "ci", "hardware", "verilator",
    "dependency-graph", "code-analysis", "agentic"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vishwaksen-1/rtl-aid"
Issues = "https://github.com/vishwaksen-1/rtl-aid/issues"

[project.scripts]
rtldoc = "rtl_aid.cli:main"
rtllint = "rtl_aid.lint:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rtl_aid = ["templates/**", "config/**"]
